# nyc-landmarks-research-agent

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_method.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot_instructions.md  dependabot.yml
.github/workflows/: deploy.yml  python-ci.yml
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: lint_fix.py
src/: __init__.py  config.py  main.py
src/api/: router.py
src/clients/: azure_openai_client.py  landmark_metadata_client.py  vectorstore_client.py
src/endpoints/: research.py
src/models/: api_models.py  landmark_models.py  research_models.py
src/services/: landmark_service.py  memory_service.py  research_service.py
src/util/: helpers.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_vectorstore_client.py
tests/unit/: __init__.py  test_helpers.py  test_memory_service.py
